crates/tests/fixtures/harness/data/error/guid_const_missing_value/input.rdl

#[win32]
mod Test {
    const MY_GUID: GUID;
}
        